--- a/download_era.ipynb
+++ b/download_era.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -346,8 +346,249 @@
      "text": [
       "2025-04-15 16:58:06,924 INFO Request ID is c28b82dd-ea9c-4403-b70d-0d5f593f4dec\n",
       "2025-04-15 16:58:07,077 INFO status has been updated to accepted\n",
-      "2025-04-15 16:58:16,322 INFO status has been updated to running\n"
+      "2025-04-15 16:58:16,322 INFO status has been updated to running\n",
+      "2025-04-15 17:34:35,783 INFO status has been updated to successful\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4b71487d786f457eb2c10a61fb571250",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "f2f870a33ee3749eda771fb89494bbfd.nc:   0%|          | 0.00/3.10G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-15 17:43:50,349 INFO Request ID is a299fabf-4f2a-4af0-a2ca-fdf0ebeaf79f\n",
+      "2025-04-15 17:43:50,506 INFO status has been updated to accepted\n",
+      "2025-04-15 17:44:04,802 INFO status has been updated to running\n",
+      "2025-04-15 18:20:17,944 INFO status has been updated to successful\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2579caebc90941a49272314323f86953",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "697f552eb931a720d80e82fe58452edf.nc:   0%|          | 0.00/3.07G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-15 18:30:41,131 INFO Request ID is 2a40f17b-a141-475c-9e8a-16fd657a01b1\n",
+      "2025-04-15 18:30:41,398 INFO status has been updated to accepted\n",
+      "2025-04-15 18:31:03,320 INFO status has been updated to running\n",
+      "2025-04-15 19:09:19,307 INFO status has been updated to successful\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6c20386a840a4d2f80cc612439fe1fad",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "949c3d764984ef8ec4321fab946d530a.nc:   0%|          | 0.00/3.09G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-15 19:19:53,928 INFO Request ID is 94e061f4-4692-4286-bb3d-ec0069cd94b4\n",
+      "2025-04-15 19:19:54,100 INFO status has been updated to accepted\n",
+      "2025-04-15 19:20:15,980 INFO status has been updated to running\n",
+      "2025-04-15 19:58:22,938 INFO status has been updated to successful\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4af532d3acaf409a94f31dcbf9cedcfe",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "285ae92a60bd4c29aa2e305c5229a83c.nc:   0%|          | 0.00/3.09G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-15 20:03:25,106 INFO Request ID is 2d57538f-4b9f-4214-bc91-b64dd00cf340\n",
+      "2025-04-15 20:03:25,277 INFO status has been updated to accepted\n",
+      "2025-04-15 20:03:34,107 INFO status has been updated to running\n",
+      "2025-04-15 20:40:03,453 INFO status has been updated to successful\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "821fd54c090f430e8a59537e889e6eab",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "f096200cc3d231324f74ff988f57397.nc:   0%|          | 0.00/3.10G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-15 20:56:41,230 INFO Request ID is af9fcf08-8b06-4645-8e64-9b7ff52b0ead\n",
+      "2025-04-15 20:56:41,387 INFO status has been updated to accepted\n",
+      "2025-04-15 20:56:55,404 INFO status has been updated to running\n",
+      "2025-04-15 21:31:13,545 INFO status has been updated to successful\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "396c6aa308f743139c4f87353b788ea9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "983ff7692e5ef27a9547d660125723eb.nc:   0%|          | 0.00/3.10G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-15 21:36:31,985 INFO Request ID is da2fd4f1-3472-4b1a-a99e-3f4e09a2b22f\n",
+      "2025-04-15 21:36:32,155 INFO status has been updated to accepted\n",
+      "2025-04-15 21:36:46,614 INFO status has been updated to running\n",
+      "2025-04-15 22:13:04,924 INFO status has been updated to successful\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "20308f315c854e11a80bd7f891d3d66e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "f36c50bdb8efe188cd179adf8f33c1f7.nc:   0%|          | 0.00/3.09G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-15 22:19:57,242 INFO Request ID is 53f489a0-e34f-4567-8d30-f97774fb0620\n",
+      "2025-04-15 22:19:57,394 INFO status has been updated to accepted\n",
+      "2025-04-15 22:20:06,483 INFO status has been updated to running\n",
+      "2025-04-15 22:52:29,290 INFO status has been updated to successful\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4b90aaf7f14d45668c7b7cdb51727833",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ac6f22cdb10571794f6d250225069bf2.nc:   0%|          | 0.00/3.11G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-15 22:58:25,643 INFO Request ID is c623e93a-34b8-41da-a43d-9bae1ab429f4\n",
+      "2025-04-15 22:58:25,805 INFO status has been updated to accepted\n",
+      "2025-04-15 23:10:47,845 INFO status has been updated to running\n",
+      "2025-04-15 23:44:55,456 INFO status has been updated to successful\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a0452c71434348f5a7983512fa8fbcf8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "b8a3f0e62655606abb6e0891414a839b.nc:   0%|          | 0.00/3.11G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-15 23:55:30,275 INFO Request ID is 0d752c92-d22b-4309-82a6-684900c85e31\n",
+      "2025-04-15 23:55:30,427 INFO status has been updated to accepted\n",
+      "2025-04-16 00:54:08,034 INFO status has been updated to running\n",
+      "2025-04-16 01:30:16,583 INFO status has been updated to successful\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1de369da0335417784704537a5e1ea1c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "53c38794978cf342635b51dd20248a27.nc:   0%|          | 0.00/3.11G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nfor year in new_years:\\n    out_file = out_fol + \\'era5_single_uandv_\\' + year + \\'_capecanaveral\\'+\\'.nc\\'\\n    request[\"year\"] = [year]\\n    client.retrieve(dataset, request).download(out_file)\\n    print(\\'Downloaded: \\', out_file)\\n\\n'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
